Add Flush API, various formatting
